0023148: Error in stepstrcmp

Fix for reading complex entities in STEP reader